--- a/app/package.json
+++ b/app/package.json
@@ -20,11 +20,13 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gifted-charts": "^1.4.58",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.8.0"
+    "react-native-svg": "^15.11.2",
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
