--- a/app/package.json
+++ b/app/package.json
@@ -10,23 +10,24 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
-    "expo": "~52.0.41",
+    "@react-navigation/native-stack": "^7.3.10",
+    "expo": "~52.0.46",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.485.0",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.9",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gifted-charts": "^1.4.58",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.11.2",
-    "react-native-webview": "^13.13.5"
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
